# soroban-render

./: .gitignore  README.md  docker-compose.yml  llms-full.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml  deploy.yml
apps/demo/: .env.production  index.html  package.json  test-includes-browser.mjs  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/demo/src/: App.tsx  index.css
apps/viewer/: check-css.mjs  index.html  package.json  tailwind.config.js  test-includes-browser.mjs  test-includes.mjs  test-json.mjs  test-json2.mjs  vite.config.ts
apps/viewer/src/: App.tsx  index.css  vite-env.d.ts
contracts/chunked-example/: Cargo.toml
contracts/chunked-example/src/: lib.rs
contracts/chunked-example/test_snapshots/tests/: test_get_chunk.1.json  test_init.1.json
contracts/hello/: Cargo.toml
contracts/hello/src/: lib.rs
contracts/homepage/: Cargo.toml
contracts/homepage/src/: lib.rs
contracts/homepage/test_snapshots/tests/: test_add_demo.1.json  test_init_and_render.1.json
contracts/theme/: Cargo.toml
contracts/theme/src/: lib.rs
contracts/todo/: Cargo.toml
contracts/todo/src/: lib.rs
contracts/todo/test_snapshots/test/: test_add_and_get_task.1.json  test_complete_task.1.json  test_per_user_isolation.1.json  test_render_about.1.json  test_render_json.1.json  test_render_json_with_wallet.1.json  test_render_tasks_with_wallet.1.json
contracts/u256-vec-demo/: Cargo.toml
contracts/u256-vec-demo/src/: lib.rs
docs/: README.md  api-reference.md  best-practices.md  examples.md  getting-started.md  hello-world.md  introduction.md  json-format.md  markdown-format.md  react-integration.md  router-guide.md  rust-sdk.md  styling.md  testing.md  troubleshooting.md  viewing-contracts.md
docs/design/: chunked-content-implementation-plan.md  chunked-content.md
templates/viewer-deploy/: .env.example  .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
templates/viewer-deploy/.github/workflows/: deploy.yml
templates/viewer-deploy/src/: index.css  vite-env.d.ts
