[package]
name = "soroban-render-hello"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Minimal Hello World contract demonstrating Soroban Render"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-render-sdk = { workspace = true, default-features = false, features = ["markdown", "styles"] }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
