[package]
name = "soroban-render-homepage"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-render-sdk = { workspace = true, default-features = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
