[package]
name = "soroban-render-theme"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Reusable theme components contract for Soroban Render"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-render-sdk = { workspace = true, default-features = false, features = ["markdown", "styles"] }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
