[package]
name = "soroban-render-u256-vec-demo"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Demo contract showing how to work with Vec<U256> in Soroban"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22.0.0"
soroban-render-sdk = { git = "https://github.com/wyhaines/soroban-render-sdk.git", default-features = false, features = ["markdown", "styles"] }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
