[package]
name = "soroban-render-u256-vec-demo"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Demo contract showing how to work with Vec<U256> in Soroban"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-render-sdk = { workspace = true, default-features = false, features = ["markdown", "styles"] }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
